--- a/dso/branches/3.1/kits/source/docs/notices/releasenotes.txt
+++ b/dso/branches/3.1/kits/source/docs/notices/releasenotes.txt
@@ -1,5 +1,5 @@
 
-3.1 Feature Complete Build
+3.1.0 Stable1 Build
 
 Documentation: http://www.terracotta.org/web/display/docs/Home
 Forums:        http://forums.terracotta.org/forums/forums/list.page
