DEV-3387: new docs

--- a/dso/trunk/kits/source/docs/notices/releasenotes.txt
+++ b/dso/trunk/kits/source/docs/notices/releasenotes.txt
@@ -1,12 +1,33 @@
 
-3.1.0 
 
-Documentation: http://www.terracotta.org/web/display/docs/Home
-Forums:        http://forums.terracotta.org/forums/forums/list.page
-Mailing Lists: http://lists.terracotta.org
-Support:       http://www.terracotta.org/web/display/enterprise/Support
-Release Notes:  http://www.terracotta.org/web/display/docs/Release+Notes
 
-----------------------------------------
-Copyright Terracotta, Inc. All rights reserved. 
-http://www.terracotta.org
+
+
+
+
+<html>
+<head>
+	<title>ACCESS DENIED</title>
+</head>
+
+<body>
+
+	<table cellpadding="1" cellspacing="0" border="0" align="center" width="80%" bgcolor="#cc0000"><tr><td>
+	<table cellpadding="4" cellspacing="0" border="0" width="100%" bgcolor="#ffcccc"><tr><td>
+		<span style="color:#cc0000;font-weight:bold;">ACCESS DENIED</span>
+		<p>
+        It seems that you have tried to perform an operation which you are not permitted to perform.
+		</p>
+        
+        <p>
+            You cannot view this URL as a guest. You must <a rel="nofollow" href="/jira/login.jsp?os_destination=%2Fsecure%2Fattachment%2F14012%2Freleasenotes.txt">login</a>.
+        </p>
+        
+        <p>
+		If you think this message is wrong, please consult your <a href="/jira/secure/Administrators.jspa">administrators</a> about getting the necessary permissions.
+		</p>
+	</td></tr></table>
+	</td></tr></table>
+
+</body>
+</html>
