--- a/dso/trunk/kits/source/docs/notices/INSTALL.TXT
+++ b/dso/trunk/kits/source/docs/notices/INSTALL.TXT
@@ -1,4 +1,4 @@
-Terracotta 3.1.1 - Simple Scale for Enterprise Java
+Terracotta 3.3.0-SNAPSHOT - Simple Scale for Enterprise Java
 ===================================================
 
 These simplified installation instructions are intended for quick platform 
@@ -99,5 +99,5 @@ You'll find a number of helpful guides in the documentation section of the
 Terracotta website (http://www.terracotta.org/web/display/orgsite/Documentation)
 
 ----
-Copyright (c) 2009, Terracotta, Inc.
+All content copyright Terracotta, Inc., unless otherwise indicated. All rights reserved. 
 http://www.terracotta.org
